# echo

./: .gitignore  Dockerfile  LICENSE  README.md  build  echo.cabal  func.yaml  package.yaml  stack.yaml
app/: Main.hs
