name:                echo
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ezoerner/echo#readme
license:             BSD3
license-file:        LICENSE
author:              Eric Zoerner
maintainer:          eric.zoerner@gmail.com
copyright:           Copyright: (c) 2016 Eric Zoerner
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable echo-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , echo
  default-language:    Haskell2010

test-suite echo-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , echo
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ezoerner/echo
